@@ -1,8 +1,6 @@
 package ru.skypro.homework.service.impl;
 
-import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import ru.skypro.homework.dto.Comment;
@@ -11,16 +9,14 @@ import ru.skypro.homework.dto.CreateOrUpdateComment;
 import ru.skypro.homework.entity.AdEntity;
 import ru.skypro.homework.entity.CommentEntity;
 import ru.skypro.homework.entity.UserEntity;
-import ru.skypro.homework.mapper.CommentMapper;
+import ru.skypro.homework.mapper.mapper.CommentMapper;
 import ru.skypro.homework.repository.AdRepository;
 import ru.skypro.homework.repository.CommentRepository;
 import ru.skypro.homework.repository.UserRepository;
 import ru.skypro.homework.service.CommentService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Slf4j
 @Service
 @RequiredArgsConstructor
 @Transactional
@@ -33,69 +29,61 @@ public class CommentServiceImpl implements CommentService {
 
     @Override
     public Comments getComments(Integer adId) {
-        List<CommentEntity> commentEntities = commentRepository.findAllByAd_IdOrderByCreatedAtDesc(adId);
-        Comments comments = new Comments();
-        comments.setCount(commentEntities.size());
-        comments.setResults(commentEntities.stream()
-                .map(commentMapper::toDto)
-                .collect(Collectors.toList()));
-        return comments;
+        List<Comment> comments = commentRepository.findByAd_Id(adId).stream().map(commentMapper::toDto).toList();
+
+        Comments result = new Comments();
+        result.setCount(comments.size());
+        result.setResults(comments);
+        return result;
     }
 
     @Override
-    public Comment addComment(Integer adId, CreateOrUpdateComment createOrUpdateComment, String username) {
-        AdEntity ad = adRepository.findById(adId)
-                .orElseThrow(() -> new RuntimeException("Ad not found"));
+    public Comment addComment(Integer adId, CreateOrUpdateComment dto, String username) {
 
-        UserEntity author = userRepository.findByEmail(username)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+        AdEntity ad = adRepository.findById(adId).orElseThrow(() -> new RuntimeException("Ad not found"));
 
-        CommentEntity commentEntity = new CommentEntity();
-        commentEntity.setText(createOrUpdateComment.getText());
-        commentEntity.setAd(ad);
-        commentEntity.setAuthor(author);
+        UserEntity author = userRepository.findByEmail(username).orElseThrow(() -> new RuntimeException("User not found"));
 
-        CommentEntity savedComment = commentRepository.save(commentEntity);
-        return commentMapper.toDto(savedComment);
+        CommentEntity entity = commentMapper.toEntity(dto);
+        entity.setAuthor(author);
+        entity.setAd(ad);
+
+        return commentMapper.toDto(commentRepository.save(entity));
     }
 
     @Override
     public void deleteComment(Integer adId, Integer commentId, String username) {
-        CommentEntity commentEntity = commentRepository.findByIdAndAd_Id(commentId, adId);
 
-        UserEntity user = userRepository.findByEmail(username)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+        CommentEntity comment = commentRepository.findByIdAndAd_Id(commentId, adId).orElseThrow(() -> new RuntimeException("Comment not found"));
 
-        if (!commentEntity.getAuthor().getId().equals(user.getId())) {
-            throw new RuntimeException("Not enough permissions to delete comment");
+        UserEntity user = userRepository.findByEmail(username).orElseThrow(() -> new RuntimeException("User not found"));
+        if (
+                !comment.getAuthor().getId().equals(user.getId())
+        ) {
+            user.getRole();
+            throw new RuntimeException("Forbidden");
         }
 
-        commentRepository.delete(commentEntity);
+
+        commentRepository.delete(comment);
     }
 
     @Override
-    public Comment updateComment(Integer adId, Integer commentId, CreateOrUpdateComment createOrUpdateComment, String username) {
-        CommentEntity commentEntity = commentRepository.findByIdAndAd_Id(commentId, adId);
+    public Comment updateComment(Integer adId, Integer commentId, CreateOrUpdateComment dto, String username) {
 
-        UserEntity user = userRepository.findByEmail(username)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+        CommentEntity comment = commentRepository.findByIdAndAd_Id(commentId, adId).orElseThrow(() -> new RuntimeException("Comment not found"));
 
-        if (!commentEntity.getAuthor().getId().equals(user.getId())) {
-            throw new RuntimeException("Not enough permissions to edit comment");
+        UserEntity user = userRepository.findByEmail(username).orElseThrow(() -> new RuntimeException("User not found"));
+
+        if (
+                !comment.getAuthor().getId().equals(user.getId())
+        ) {
+            user.getRole();
+            throw new RuntimeException("Forbidden");
         }
 
-        commentMapper.map(createOrUpdateComment, commentEntity);
-        CommentEntity updatedComment = commentRepository.save(commentEntity);
-        return commentMapper.toDto(updatedComment);
-    }
 
-    public boolean isCommentOwner(Integer commentId, String username) {
-        CommentEntity commentEntity = commentRepository.findById(commentId)
-                .orElseThrow(() -> new RuntimeException("Comment not found"));
-
-        UserEntity user = userRepository.findByEmail(username)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        return commentEntity.getAuthor().getId().equals(user.getId());
+        commentMapper.updateFromDto(dto, comment);
+        return commentMapper.toDto(commentRepository.save(comment));
     }
 }
